--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="xumoyiddinturayev">\@Ismail_Allakov</string>
     <string name="termiz_davlat_universiteti">Termiz Davlat Universiteti</string>
     <string name="muallif_fish">Masharipova Gularam Kamilovna </string>
-    <string name="muallif_haqida"> Toshkent to‘qimachilik va yengil sanoat instituti, Falsafa fanlari doktori, professor. </string>
+    <string name="muallif_fish2">Masharipova Gularam Kamilovna </string>
+    <string name="muallif_haqida"> 1967 yil Xorazm viloyatida tug`ilgan. Toshkent to‘qimachilik va yengil sanoat instituti, Falsafa fanlari doktori, professor. </string>
+    <string name="muallif_haqida2"> 1973 yil Surxondaryo viloyatida tug`ilgan. Denov tadbirkorlik va pedagogika instituti, Falsafa fanlari doktori. </string>
 </resources>
